--- a/views/layouts/mainLayout.hbs
+++ b/views/layouts/mainLayout.hbs
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
-<body class="bg-info">
+<body class="bg-secondary">
     <div class="row">
-        <div class="col-md-6 offset-md-3" style="background-color: #fff;margin-top: 25px;padding:20px;">
+        <div class="offset-md-3" style="background-color: rgb(239, 238, 245);margin-top: 25px;padding:20px;">
             {{{body}}}
         </div>
     </div>
