--- a/views/contact/list.hbs
+++ b/views/contact/list.hbs
@@ -1,5 +1,5 @@
 <h3><a class="btn btn-secondary" href="/contact"><i class="fa fa-plus"></i> Create New</a> Contact List</h3>
-<table class="table table-striped">
+<table class="table table-hover">
     <thead>
         <tr>
             <th>First Name</th>
@@ -7,7 +7,7 @@
             <th>Email</th>
             <th>Phone Number</th>
             <th>Status</th>
-            <th></th>
+            <th>Edit/Delete</th>
         </tr>
     </thead>
     <tbody>
